content/boomerang-flow/3.2.0/getting-to-know/05.triggers.md
---
title: Triggers
index: 5
---

# Integrations

Workflows can be triggered via the Flow UI by running a workflow from the Workflows page.

Flow also offers the following additional trigger types that can be configured as part of workflow settings. 

* Manual
* Scheduler
* Webhook
* Custom Event

Trigger types are accessed from the **Configure** tab in the workflow Editor page.

![Configure tab](./assets/img/workflow-editor-configure.png)

## Webhook

Enable the Webhook trigger, then click the **Build webhook URL** link.

You will receive a workflow-specific access token that can be used to invoke the latest revision of your workflow programmatically, with the following exposed endpoints.

![Webhook Triggers](./assets/img/webhook-trigger.png)

### Triggering workflow

**Request** 

POST `http://{flow.service.webhook}/webhook/payload`

```json
{
  "token" : "<Webhook API Token Here>"
}
```

**Response**

After the submission, you will receive an `activityId`. This can be used to request the status of the workflow execution.

```json
{
  "activityId": "5de81b5fe638b70001fa9d09"
}
```

### Execution Status

**Request**

GET `http://{flow.service.webhook}/webhook/status/{activityId}`

```json
{
  "token" : "<Webhook API Token Here>"
}
```

**Response**

The response for execution status will contain the overall execution status and breakdown of individual tasks, including the output properties of each task if they exist.

```json
{
    "creationDate": "2019-12-04T20:47:27.394+0000",
    "duration": 45977,
    "id": "5de81b5fe638b70001fa9d09",
    "status": "completed",
    "workflowId": "5dd74d0976df2d000110e52a",
    "workflowRevisionid": "5de1d44ee638b70001fa8a13",
    "trigger": "webhook",
    "steps": [
        {
            "activityId": "5de81b5fe638b70001fa9d09",
            "duration": 39130,
            "flowTaskStatus": "completed",
            "id": "5de81b5fe638b70001fa9d0a",
            "order": 1,
            "startTime": "2019-12-04T20:47:27.513+0000",
            "taskId": "513cde12-4288-4b1d-a79a-51fb23f8e1c0",
            "taskName": "Run Custom Task 1",
            "outputs": {
                "BMRG_TEST": "Tyson is awesome"
            }
        },
        {
            "activityId": "5de81b5fe638b70001fa9d09",
            "duration": 6669,
            "flowTaskStatus": "completed",
            "id": "5de81b5fe638b70001fa9d0b",
            "order": 2,
            "startTime": "2019-12-04T20:48:06.660+0000",
            "taskId": "1a4c6b9e-db2e-4149-9603-9957be358138",
            "taskName": "Sleep 1",
            "outputs": {
                "": ""
            }
        }
    ],
    "teamName": "Tysons Test Team"
}
```

## Scheduling  

Workflows can be used executed on a schedule. You can either select the date and time to run the schedule (using the UI controls), or if you are an advanced user, you can specify cron strings to run the workflows.

## Action Listener

TBA
